--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -19,7 +19,7 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">主题</string>
-    <string name="theme_settings_summary">Monet</string>
+    <string name="theme_settings_summary">Monet，字体，图标包</string>
 
     <!-- Color picker -->
     <string name="rgb">RGB</string>
@@ -44,6 +44,13 @@
     <string name="theme_customization_font_title">标题 / 正文 字体</string>
     <!-- Title of the setting which enables overlays to customize the system wide icon pack. -->
     <string name="theme_customization_icon_pack_title">图标包</string>
+
+    <!-- Custom font -->
+    <string name="custom_font_preference_title">选择字体</string>
+    <string name="custom_font_preference_footer_message">选择字体后需要重启生效</string>
+    <string name="cannot_resolve_activity">无法执行此操作！</string>
+    <string name="invalid_font_file">字体文件没有有效的 PostScript 表</string>
+    <string name="failed_to_update_font">更新字体失败</string>
 
     <!-- Statusbar settings -->
     <string name="statusbar_settings_title">状态栏</string>
@@ -75,8 +82,8 @@
     <string name="statusbar_battery_show_percent_inside_title">在图标内显示电量百分比</string>
 
     <!-- Combined signal icons in status bar -->
-    <string name="combined_status_bar_signal_icons">组合信号图标</string>
-    <string name="combined_status_bar_signal_icons_summary">禁用组合信号图标，需要重启手机或系统界面</string>
+    <string name="combined_status_bar_signal_icons">隐藏信号图标</string>
+    <string name="combined_status_bar_signal_icons_summary">禁用 WiFi 开启时隐藏信号图标，需要重启系统界面</string>
 
     <!-- Lockscree settings -->
     <string name="lockscreen_settings_title">锁屏</string>
@@ -90,21 +97,21 @@
     <string name="screen_off_fod_summary">屏幕关闭时显示指纹解锁图案</string>
 
     <!-- Edge light -->
-    <string name="edge_light_title">边缘闪光</string>
-    <string name="edge_light_summary">收到通知时在环境显示边缘显示动画</string>
-    <string name="aod_pulse_title">在环境显示中启用边缘闪光</string>
-    <string name="aod_pulse_summary">启用在从环境显示过渡后继续显示闪光的功能</string>
+    <string name="edge_light_title">通知光效</string>
+    <string name="edge_light_summary">收到通知时在环境显示边缘显示光效</string>
+    <string name="aod_pulse_title">在环境显示中启用光效</string>
+    <string name="aod_pulse_summary">启用在从环境显示过渡后继续显示通知光效</string>
     <string name="aod_pulse_hide_content_title">隐藏环境显示内容</string>
-    <string name="aod_pulse_hide_content_summary">启用后将在边缘闪光时隐藏环境显示内容</string>
-    <string name="ambient_pulse_color_mode_title">边缘闪光颜色</string>
+    <string name="aod_pulse_hide_content_summary">通知光效开启时隐藏环境显示内容</string>
+    <string name="ambient_pulse_color_mode_title">光效颜色</string>
     <string name="ambient_pulse_custom_color_mode_title">自定义颜色</string>
-    <string name="ambient_pulse_custom_color_mode_summary">为边缘闪光选择一个颜色</string>
-    <string name="ambient_pulse_repeat_count_title">闪光重复次数</string>
-    <string name="ambient_pulse_repeat_count_summary">选择边缘闪光重复次数，如果设为 0 将重复至超时</string>
-    <string name="ambient_pulse_timeout_title">边缘闪光超时</string>
-    <string name="ambient_pulse_timeout_summary">边缘闪光超时时间, 如果设为 0 将重复直到开启屏幕</string>
-    <string name="ambient_pulse_animation_duration_title">边缘闪光持续时间</string>
-    <string name="ambient_pulse_animation_duration_summary">边缘光线动画的持续时间（秒）, 默认为 2 秒</string>
+    <string name="ambient_pulse_custom_color_mode_summary">为通知光效选择一个颜色</string>
+    <string name="ambient_pulse_repeat_count_title">光效重复次数</string>
+    <string name="ambient_pulse_repeat_count_summary">通知光效重复次数，如果设为 0 将重复至超时</string>
+    <string name="ambient_pulse_timeout_title">光效超时</string>
+    <string name="ambient_pulse_timeout_summary">通知光效超时时间, 如果设为 0 将重复直到开启屏幕</string>
+    <string name="ambient_pulse_animation_duration_title">光效持续时间</string>
+    <string name="ambient_pulse_animation_duration_summary">通知光效的持续时间（秒）, 默认为 2 秒</string>
 
     <string name="accent">强调色 </string>
     <string name="wallpaper">壁纸</string>
@@ -122,13 +129,13 @@
     <!-- Double Tap to Sleep Statusbar -->
     <string name="statusbar_gesture_title">手势</string>
     <string name="double_tap_sleep_gesture_title">双击锁屏</string>
-    <string name="double_tap_sleep_gesture_summary">双击状态栏或锁屏界面以关闭屏幕</string>
+    <string name="double_tap_sleep_gesture_summary">双击主界面或锁定界面的状态栏以关闭屏幕</string>
 
     <string name="miscellaneous_category_title">杂项</string>
 
     <!-- Location privacy indicator -->
     <string name="location_privacy_indicator_title">位置指示器</string>
-    <string name="location_privacy_indicator_summary">重启手机或重启系统界面以生效</string>
+    <string name="location_privacy_indicator_summary">需要重启系统界面</string>
 
     <!-- Miscellaneous -->
     <string name="miscellaneous_settings_summary">手势，截图提示音</string>
@@ -136,7 +143,7 @@
     <!-- Torch Power button gestures -->
     <string name="torch_power_button_gesture_title">息屏时切换手电筒</string>
     <string name="torch_power_button_gesture_none">已禁用</string>
-    <string name="torch_power_button_gesture_dt">双击电源键</string>
+    <string name="torch_power_button_gesture_dt">双击电源键（较慢）</string>
     <string name="torch_power_button_gesture_lp">长按电源键</string>
 
     <!-- Screenshot shutter -->
