--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,7 +55,7 @@
 
     <!-- Statusbar settings -->
     <string name="statusbar_settings_title">Statusbar</string>
-    <string name="statusbar_settings_summary">Network traffic, Brightness slider, Battery style</string>
+    <string name="statusbar_settings_summary">Network traffic, Battery style</string>
 
     <!-- Network traffic -->
     <string name="network_traffic_category_title">Network traffic</string>
@@ -64,15 +64,6 @@
     <string name="statusbar_network_traffic_unit_text_size_title">Network traffic unit text size</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
-
-    <!-- QS Brightness -->
-    <string name="qs_brightness_category_title">Brightness slider</string>
-    <string name="qs_show_brightness_title">Show brightness slider in QS panel</string>
-    <string name="qqs_show_brightness_title">Show brightness slider in QQS panel</string>
-    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
-    <string name="qs_brightness_position_bottom_summary_on">Position: Bottom</string>
-    <string name="qs_brightness_position_bottom_summary_off">Position: Top</string>
-    <string name="qs_show_auto_brightness_button_title">Show auto brightness button</string>
 
     <!-- Battery -->
     <string name="statusbar_battery_category_title">Battery</string>
@@ -85,6 +76,19 @@
     <!-- Combined signal icons in status bar -->
     <string name="combined_status_bar_signal_icons">Combined signal icons</string>
     <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in status bar. Needs SystemUI restart or reboot</string>
+
+    <!-- QS Settings -->
+    <string name="qs_settings_title">QuickSettings</string>
+    <string name="qs_settings_summary">Brightness slider</string>
+
+    <!-- Brightness slider -->
+    <string name="qs_brightness_category_title">Brightness slider</string>
+    <string name="qs_show_brightness_title">Show brightness slider in QS panel</string>
+    <string name="qqs_show_brightness_title">Show brightness slider in QQS panel</string>
+    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
+    <string name="qs_brightness_position_bottom_summary_on">Position: Bottom</string>
+    <string name="qs_brightness_position_bottom_summary_off">Position: Top</string>
+    <string name="qs_show_auto_brightness_button_title">Show auto brightness button</string>
 
     <!-- Lockscreen settings -->
     <string name="lockscreen_settings_title">Lockscreen</string>
