--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -65,15 +65,6 @@
     <string name="statusbar_network_traffic_rate_text_scale_factor_title">根据网络速度改变字体大小</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
 
-    <!-- QS Brightness -->
-    <string name="qs_brightness_category_title">亮度滑块</string>
-    <string name="qs_show_brightness_title">下拉快速设置中显示滑块</string>
-    <string name="qqs_show_brightness_title">快速设置中显示滑块</string>
-    <string name="qs_brightness_position_bottom_title">滑块位置</string>
-    <string name="qs_brightness_position_bottom_summary_on">位置：底部</string>
-    <string name="qs_brightness_position_bottom_summary_off">位置：顶部</string>
-    <string name="qs_show_auto_brightness_button_title">自动亮度按钮</string>
-
     <!-- Battery -->
     <string name="statusbar_battery_category_title">电池</string>
     <string name="statusbar_battery_style_title">图标样式</string>
@@ -85,6 +76,27 @@
     <!-- Combined signal icons in status bar -->
     <string name="combined_status_bar_signal_icons">隐藏信号图标</string>
     <string name="combined_status_bar_signal_icons_summary">禁用 WiFi 开启时隐藏信号图标，需要重启系统界面</string>
+
+    <!-- QS Settings -->
+    <string name="qs_settings_title">快速设置</string>
+    <string name="qs_settings_summary">亮度滑块，音乐封面</string>
+
+    <!-- Brightness slider -->
+    <string name="qs_brightness_category_title">亮度滑块</string>
+    <string name="qs_show_brightness_title">下拉快速设置中显示滑块</string>
+    <string name="qqs_show_brightness_title">快速设置中显示滑块</string>
+    <string name="qs_brightness_position_bottom_title">滑块位置</string>
+    <string name="qs_brightness_position_bottom_summary_on">位置：底部</string>
+    <string name="qs_brightness_position_bottom_summary_off">位置：顶部</string>
+    <string name="qs_show_auto_brightness_button_title">自动亮度按钮</string>
+
+    <!-- Media artwork -->
+    <string name="media_category">音乐通知栏</string>
+    <string name="artwork_media_background_title">专辑封面背景</string>
+    <string name="artwork_media_background_summary">将专辑封面作为音乐通知栏的背景</string>
+    <string name="artwork_media_background_enable_blur_title">背景模糊</string>
+    <string name="artwork_media_background_blur_radius_title">背景模糊量</string>
+    <string name="artwork_media_background_alpha_title">背景透明度</string>
 
     <!-- Lockscree settings -->
     <string name="lockscreen_settings_title">锁屏</string>
