Revert "KryptonSettings: Allow doubletap/longpress power to toggle torch [2/2]"
This reverts commit 28d8629e81cab50923d26bf743042b933140294a.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -152,13 +152,7 @@
     <string name="location_privacy_indicator_summary">Reboot or restart system UI for it to take effect</string>
 
     <!-- Miscellaneous -->
-    <string name="miscellaneous_settings_summary">Gestures, Screenshot sound, Volume rocker</string>
-
-    <!-- Torch Power button gestures -->
-    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
-    <string name="torch_power_button_gesture_none">Disabled</string>
-    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
-    <string name="torch_power_button_gesture_lp">Long press power button</string>
+    <string name="miscellaneous_settings_summary">Screenshot sound, Volume rocker</string>
 
     <!-- Screenshot shutter -->
     <string name="screenshot_shutter_sound_title">Screenshot sound</string>
