--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -92,7 +92,7 @@
 
     <!-- Media artwork -->
     <string name="media_category">音乐通知栏</string>
-    <string name="artwork_media_background_title">专辑封面背景</string>
+    <string name="artwork_media_background_title">显示封面</string>
     <string name="artwork_media_background_summary">将专辑封面作为音乐通知栏的背景</string>
     <string name="artwork_media_background_enable_blur_title">背景模糊</string>
     <string name="artwork_media_background_blur_radius_title">背景模糊量</string>
@@ -111,8 +111,8 @@
 
     <!-- Media artwork -->
     <string name="keyguard_media_art">专辑封面</string>
-    <string name="keyguard_media_art_title">显示音乐专辑封面</string>
-    <string name="keyguard_media_art_summary">当播放音乐时在锁屏界面显示专辑封面而不是壁纸</string>
+    <string name="keyguard_media_art_title">显示封面</string>
+    <string name="keyguard_media_art_summary">当播放音乐时在锁屏界面显示音乐专辑封面而不是壁纸</string>
     <string name="keyguard_media_art_enable_blur_title">背景模糊</string>
     <string name="keyguard_media_art_blur_radius_title">背景模糊量</string>
 
