--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -98,9 +98,9 @@
     <string name="artwork_media_background_blur_radius_title">背景模糊量</string>
     <string name="artwork_media_background_alpha_title">背景透明度</string>
 
-    <!-- Lockscree settings -->
+    <!-- Lockscreen settings -->
     <string name="lockscreen_settings_title">鎖屏</string>
-    <string name="lockscreen_settings_summary">充電資訊</string>
+    <string name="lockscreen_settings_summary">充電資訊，手勢，通知光效</string>
 
     <!-- Lockscreen battery info -->
     <string name="lockscreen_charging_info_title">充電資訊</string>
@@ -108,6 +108,22 @@
 
     <string name="screen_off_fod_title">息屏指紋</string>
     <string name="screen_off_fod_summary">螢幕關閉時顯示指紋解鎖圖案</string>
+
+    <!-- Edge light -->
+    <string name="edge_light_title">通知光效</string>
+    <string name="enable_edge_light">啟用通知光效</string>
+    <string name="edge_light_intro_text">收到訊息時在螢幕邊緣顯示光效</string>
+    <string name="edge_light_always_trigger_on_pulse_title">隨時顯示</string>
+    <string name="edge_light_always_trigger_on_pulse_summary">無論如何都顯示通知光效</string>
+    <string name="edge_light_repeat_animation_title">重複動畫</string>
+    <string name="edge_light_repeat_animation_summary_on">直到超時</string>
+    <string name="edge_light_repeat_animation_summary_off">僅一次</string>
+    <string name="edge_light_color_mode_title">光效顏色</string>
+    <string name="accent_color">強調色（預設）</string>
+    <string name="notification_color">通知色</string>
+    <string name="wallpaper_color">桌布色</string>
+    <string name="custom_color">自定義</string>
+    <string name="edge_light_custom_color_title">自定義</string>
 
     <!-- Device settings -->
     <string name="device_settings_title">裝置設定</string>
