--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -59,6 +59,11 @@
 
     <!-- Network traffic -->
     <string name="network_traffic_category_title">网络流量监视器</string>
+    <string name="network_traffic_intro_text">
+        在状态栏中显示当前的网络流量速度。
+        监视器将在状态栏中动态显示当前上传和下载速度。
+    </string>
+    <string name="enable_network_traffic">启用网络流量监视器</string>
     <string name="statusbar_network_traffic_threshold_tx_title">上传速度到阈值时自动隐藏</string>
     <string name="statusbar_network_traffic_threshold_rx_title">下载速度到阈值时自动隐藏</string>
     <string name="statusbar_network_traffic_unit_text_size_title">网络流量监视器字体大小</string>
@@ -97,6 +102,10 @@
     <string name="artwork_media_background_enable_blur_title">背景模糊</string>
     <string name="artwork_media_background_blur_radius_title">背景模糊量</string>
     <string name="artwork_media_background_alpha_title">背景透明度</string>
+
+    <!-- Disable QS -->
+    <string name="disable_qs_title">隐藏快速设置</string>
+    <string name="disable_qs_summary">如果设备已锁定，将隐藏快速设置。但不会禁用通知气泡。</string>
 
     <!-- Lockscreen settings -->
     <string name="lockscreen_settings_title">锁屏</string>
